--- a/event-management-system-mvc.csproj
+++ b/event-management-system-mvc.csproj
@@ -189,6 +189,7 @@
     <Content Include="Views\Event\EditEventView.cshtml" />
     <Content Include="Views\Registration\CreateRegistration.cshtml" />
     <Content Include="Views\Event\Index.cshtml" />
+    <Content Include="Views\Registration\CreateRegistrationAnyEvent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
